Update the locale files

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -15,7 +15,7 @@
 #
 #                                 --Shatteredbeam
 
-# ACROBATICS
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**Dodged**
 Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
@@ -46,7 +46,7 @@ Archery.Listener=Archery:
 Archery.SkillName=ARCHERY
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 
-# AXES
+#AXES
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
 Axes.Ability.Bonus.2=Impact
@@ -229,7 +229,7 @@ Repair.Skills.StackedItems=[[DARK_RED]]You can't repair stacked items.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
 Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
 
-##Arcane Forging
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
