--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Atterrissage gracieux**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquiv\u00e9**
 Acrobatics.DodgeChance=[[RED]]Probabilit\u00e9 d\'esquive : [[YELLOW]]{0}
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]Probabilit\u00e9 de roulade gracieuse : [[YEL
 Acrobatics.Roll.Text=**ROULADE**
 Acrobatics.SkillName=ACROBATIE
 Acrobatics.Skillup=[[YELLOW]]Le talent Acrobatie augmente de {0}. Total ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]Probabilit\u00e9 de d\u00e9sorienter : [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Probabilit\u00e9 de r\u00e9cup\u00e9rer des fl\u00e8ches : [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Tir pr\u00e9cis, bonus de d\u00e9g\u00e2ts : [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=Probabilit\u00e9 de r\u00e9cup\u00e9rer des fl\u00e8ches sur le
 Archery.Listener=Archerie :
 Archery.SkillName=ARCHERIE
 Archery.Skillup=[[YELLOW]]Le talent Archerie augmente de {0}. Total ({1})
+
+#AXES
 Axes.Ability.Bonus.0=Ma\u00eetrise des haches
 Axes.Ability.Bonus.1={0} de d\u00e9g\u00e2ts en plus
 Axes.Ability.Bonus.2=Impact
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Tranche-cr\u00e2
 Axes.Skills.SS.Other.Off=[[RED]]Tranche-cr\u00e2ne[[GREEN]] s\'est termin\u00e9 pour [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Tranche-cr\u00e2ne !
 Axes.Skillup=[[YELLOW]]Le talent Haches augmente de {0}. Total ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE PELLE**
 Excavation.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE PELLE**
 Excavation.Effect.0=Foreur (Comp\u00e9tence)
@@ -73,6 +80,8 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELL
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Foreur[[GREEN]] est termin\u00e9 pour [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Foreur !
 Excavation.Skillup=[[YELLOW]]Le talent Excavation augmente de {0}. Total ({1})
+
+#FISHING
 Fishing.Ability.Info=[[RED]]P\u00eache magique : [[GRAY]] **S\'am\u00e9liore via Chasseur de tr\u00e9sors**
 Fishing.Ability.Locked.0=VERROUILL\u00c9 AVANT 150+ (Secousse)
 Fishing.Ability.Rank=[[RED]]Chasseur de tr\u00e9sors : [[YELLOW]] Rang {0}/5
@@ -92,6 +101,8 @@ Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]R\u00e9gime de fermier : [[YELLOW]]Rang {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Main verte
 Herbalism.Skills.GTe.Other.Off=[[RED]]Main verte[[GREEN]] est termin\u00e9 pour [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Main verte !
 Herbalism.Skillup=[[YELLOW]]Le talent Herboristerie augmente de {0}. Total ({1})
+
+#MINING
 Mining.Ability.Length=[[RED]]Dur\u00e9e de Broyeur : [[YELLOW]]{0}s
 Mining.Ability.Locked.0=VERROUILL\u00c9 AVANT 250+ (Minage explosif)
 Mining.Ability.Locked.1=VERROUILL\u00c9 AVANT 250+ (Grosses explosions)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]Broyeur[[GREEN]] est termin\u00e9 po
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Broyeur !
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Broyeur [[GREEN]]est pr\u00eate !
 Mining.Skillup=[[YELLOW]]Le talent Minage augmente de {0}. Total ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOUM**
 Mining.Blast.Effect.0=+35% de rendement
 Mining.Blast.Effect.1=+40% de rendement
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]Rayon d\'explosion : [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Minage explosif : [[YELLOW]]Rang {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Minage explosif !
 Mining.Blast.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Minage Explosif[[GREEN]] est pr\u00eate !
+
+#REPAIR
 Repair.Effect.0=R\u00e9paration
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -174,9 +191,13 @@ Repair.Effect.6=R\u00e9paration du diamant (talent {0}+)
 Repair.Effect.7=R\u00e9pare les outils et armures en diamant
 Repair.Effect.8=Forge arcanique
 Repair.Effect.9=R\u00e9pare les objets magiques
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]Vous venez de poser une enclume, elle peut \u00eatre utilis\u00e9e pour r\u00e9parer votre \u00e9quipement.
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=R\u00e9paration :
 Repair.SkillName=R\u00c9PARATION
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00e9tent pour r\u00e9parer le diamant.
 Repair.Skills.AdeptGold=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00e9tent pour r\u00e9parer l\'or.
 Repair.Skills.AdeptIron=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00e9tent pour r\u00e9parer le fer.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00
 Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Plut\u00f4t facile.
 Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Les \u00e9nergies arcaniques ont \u00e9t\u00e9 affaiblies sur cet objet.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]Les \u00e9nergies arcaniques ont quitt\u00e9 cet objet
 Repair.Arcane.Lost=[[RED]]Vous n\'\u00e9tiez pas suffisamment comp\u00e9tent pour pr\u00e9server les enchantements.
 Repair.Arcane.Perfect=[[GREEN]]Vous avez pr\u00e9serv\u00e9 les \u00e9nergies arcaniques de cet objet.
 Repair.Arcane.Rank=[[RED]]Forge arcanique : [[YELLOW]]Rang {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE \u00c9P\u00c9E**
 Swords.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE \u00c9P\u00c9E**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
@@ -223,6 +250,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Attaque d\u00e
 Swords.Skills.SS.Other.Off=[[RED]]Attaque d\u00e9chirante[[GREEN]] s\'est termin\u00e9 pour [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Attaque d\u00e9chirante !
 Swords.SS.Length=[[RED]]Dur\u00e9e d\'Attaque d\u00e9chirante : [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=Attentif \u00e0 l\'environnement
 Taming.Ability.Bonus.1=Les loups \u00e9vitent les dangers
 Taming.Ability.Bonus.2=Fourrure \u00e9paisse
@@ -264,6 +293,8 @@ Taming.Skillup=[[YELLOW]]Le talent Apprivoisement augmente de {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Appel r\u00e9ussi
 Taming.Summon.Fail.Ocelot=[[RED]]Il y a d\u00e9j\u00e0 trop d\'ocelots dans les environs.
 Taming.Summon.Fail.Wolf=[[RED]]Il y a d\u00e9j\u00e0 trop de loups dans les environs.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Dur\u00e9e de Berserk : [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Poings de fer
 Unarmed.Ability.Bonus.1=+{0} de d\u00e9g\u00e2ts
@@ -287,6 +318,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] s\'est termin\u00e9 pou
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Berserk !
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Berserk [[GREEN]]est pr\u00eate !
 Unarmed.Skillup=[[YELLOW]]Le talent Poings augmente de {0}. Total ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=Soufflage
 Woodcutting.Ability.1=Cong\u00e9s de coup
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
@@ -308,9 +341,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]VOTRE HACHE SE BRISE EN MILLE MORCEAUX !
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Cet arbre est trop grand !
 Woodcutting.Skillup=[[YELLOW]]Le talent B\u00fbcheronnage augmente de {0}. Total ({1})
+
+#ABILITY
+##generic
 Ability.Generic.Refresh=[[GREEN]]**COMP\u00c9TENCES RAFRA\u00ceCHIES !**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0} : [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[WHITE]]**FL\u00c8CHE DEVI\u00c9E**
 Combat.BeastLore=[[GREEN]]**CONNAISSANCE DES B\u00caTES**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Vie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -321,6 +359,9 @@ Combat.Ignition=[[RED]]**ALLUMAGE**
 Combat.StruckByGore=[[RED]]**FRAPP\u00c9 JUSQU\'AU SANG**
 Combat.TargetDazed=La cible a \u00e9t\u00e9 [[DARK_RED]]\u00c9tourdi
 Combat.TouchedFuzzy=[[DARK_RED]]Vous \u00eates \u00e9tourdi.
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]A propos de [[YELLOW]]mcMMO :,[[GOLD]]mcMMO est un mod orient\u00e9 RPG et [[RED]]open source[[GOLD]] cr\u00e9e par [[BLUE]]nossr50[[GOLD]] en f\u00e9vrier 2011. Son but est d\'offrir aux joueurs une exp\u00e9rience RPG de qualit\u00e9.,[[DARK_AQUA]]Infos :,[[GOLD]] - [[GREEN]]Faites [[RED]]/mcc[[GREEN]] pour afficher la liste des commandes,[[GOLD]] - [[GREEN]]Faites [[RED]]/[Talent][[GREEN]] pour afficher une description d\u00e9taill\u00e9es de ce talent,[[DARK_AQUA]]D\u00e9veloppeurs :,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Liens :,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug tracker,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Canal IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thread sur Bukkit.org
 Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
@@ -370,6 +411,8 @@ mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
+
+##party
 Commands.Party.InParty=[[GREEN]]Joueurs dans le groupe : {0}
 Party.Forbidden=[mcMMO] Les groupes ne sont pas permis dans ce monde (voir les permissions)
 Party.Help.0=[[RED]]L\'usage correct est /party <nom> pour rejoindre, et /party q pour quitter
@@ -395,6 +438,8 @@ Party.Teleport.Hurt=[[RED]]Vous avez \u00e9t\u00e9 bless\u00e9 durant les {0} de
 Party.Teleport.Player=[[GREEN]]Vous vous \u00eates t\u00e9l\u00e9port\u00e9 sur {0}.
 Party.Teleport.Target=[[GREEN]]{0} s\'est t\u00e9l\u00e9port\u00e9 sur vous.
 Party.Unlocked=[[GRAY]]Le groupe est d\u00e9verrouill\u00e9.
+
+##xp
 Commands.XPGain.Acrobatics=Chuter
 Commands.XPGain.Archery=Attaquer des monstres
 Commands.XPGain.Axes=Attaquer des monstres
@@ -417,9 +462,14 @@ Commands.xprate.proper.2=[[RED]]Veuillez sp\u00e9cifier true ou false pour indiq
 Commands.xprate.started.0=[[GOLD]]L\u2019\u00c9V\u00c9NEMENT BONUS D\'XP mcMMO VIENT DE COMMENCER !
 Commands.xprate.started.1=[[GOLD]]Le bonus d\'XP mcMMO est maintenant de {0}x !
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+
+#EFFECTS
+##generic
 Effects.Effects=EFFETS
 Effects.Level=[[DARK_GRAY]]NIV : [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0} : [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
 Guides.Axes=Guide coming soon...
@@ -432,22 +482,32 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
+
+#INSPECT
 Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Vous \u00eates trop \u00e9loign\u00e9 de ce joueur pour l\'inspecter !
+
+#ITEM
 Item.ChimaeraWing.Fail=**\u00c9CHEC D\'AILE DE CHIM\u00c8RE !**
 Item.ChimaeraWing.Pass=**AILE DE CHIM\u00c8RE**
 Item.Injured.Wait=Vous avez \u00e9t\u00e9 bless\u00e9 r\u00e9cemment et devez attendre pour utiliser cela. [[YELLOW]]({0}s)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]Vous avez \u00e9t\u00e9 d\u00e9sarm\u00e9 !
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Vous devez en avoir plus
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP ([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Vous \u00eates trop fatigu\u00e9 pour r\u00e9utiliser cette comp\u00e9tence maintenant.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=TALENTS DE COMBAT=-
 Stats.Header.Gathering=[[GOLD]]-=COMP\u00c9TENCES DE R\u00c9COLTE=-
 Stats.Header.Misc=[[GOLD]]-=AUTRES TALENTS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Statistiques
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
