--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Atterraggio Aggraziato**
 Acrobatics.Combat.Proc=[[GREEN]]**Schivato**
 Acrobatics.DodgeChance=[[RED]]Possibilit\u00e0 di Schivata: [[YELLOW]]{0}
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]Possibilit\u00e0 di Capriola Aggraziata: [[YE
 Acrobatics.Roll.Text=**Capriola Eseguita**
 Acrobatics.SkillName=ACROBATICA
 Acrobatics.Skillup=[[YELLOW]]L\'abilit\u00e0 Acrobatica \u00e8 aumentata di {0}. Totale ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]Possibilit\u00e0 di Stordire: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Possibilit\u00e0 di Recuperare Frecce: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Bonus al Danno di Tiro da Maestro: [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=Possibilit\u00e0 di recuperare frecce dai cadaveri
 Archery.Listener=Tiro con l\'Arco:
 Archery.SkillName=TIRO CON L\'ARCO
 Archery.Skillup=[[YELLOW]]L\'abilit\u00e0 Tiro con l\'Arco \u00e8 aumentata di {0}. Total ({1})
+
+#AXES
 Axes.Ability.Bonus.0=Maestria con l\'Ascia
 Axes.Ability.Bonus.1={0} Danni Bonus
 Axes.Ability.Bonus.2=Impatto
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Spacca Crani [[GR
 Axes.Skills.SS.Other.Off=[[RED]]Spacca Teschi[[GREEN]] si \u00e8 esaurito per [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Spacca Teschi!
 Axes.Skillup=[[YELLOW]]L\'abilit\u00e0 Asce \u00e8 aumentata di {0}. Totale ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**ABBASSI LA PALA**
 Excavation.Ability.Ready=[[GREEN]]**PREPARI LA PALA**
 Excavation.Effect.0=Giga-Trivella Demolitrice (CAPACITA\')
@@ -73,6 +80,8 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLO
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Giga-Trivella Demolitrice[[GREEN]] si \u00e8 esaurita per [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Giga-Trivella Demolitrice!
 Excavation.Skillup=[[YELLOW]]L\'abilit\u00e0 Escavazione \u00e8 aumentata di {0}. Totale ({1})
+
+#FISHING
 Fishing.Ability.Info=[[RED]]Cacciatore di Magia: [[GRAY]] **Migliora insieme al Grado di Cacciatore di Tesori**
 Fishing.Ability.Locked.0=BLOCCATO FINO AD ABILITA\' 150+ (SCUOTERE)
 Fishing.Ability.Rank=[[RED]]Grado di Cacciatore di Tesori: [[YELLOW]]{0}/5
@@ -92,6 +101,8 @@ Fishing.Listener=Pesca:
 Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
 Fishing.SkillName=PESCA
 Fishing.Skillup=[[YELLOW]]L\'abilit\u00e0 Pesca \u00e8 aumentata di {0}. Totale ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]Possibilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Contadino: [[YELLOW]]Grado {0}
 Herbalism.Ability.GTe.Length=[[RED]]Durata di Terra Verde: [[YELLOW]]{0}s
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]La tua abilit\u00e0 [[YELLOW]]Terra Verde 
 Herbalism.Skills.GTe.Other.Off=[[RED]]Terra Verde[[GREEN]] si \u00e8 dissolta per [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Terra Verde!
 Herbalism.Skillup=[[YELLOW]]L\'abilit\u00e0 Erboristeria \u00e8 aumentata di {0}. Totale ({1})
+
+#MINING
 Mining.Ability.Length=[[RED]]Durata di Super Demolitore: [[YELLOW]]{0} s
 Mining.Ability.Locked.0=BLOCCATA FINO A 125+ DI ABILITA\' (ESTRAZIONE ESPLOSIVA)
 Mining.Ability.Locked.1=BLOCCATA FINO A 250+ DI ABILITA\' (BOMBE PIU\' GRANDI)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Demolitore[[GREEN]] si \u00e8 
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Super Demolitore!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Super Demolitore [[GREEN]]si \u00e8 rigenerata!
 Mining.Skillup=[[YELLOW]]L\'abilit\u00e0 Estrazione \u00e8 aumentata di {0}. Totale ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% minerali estratti
 Mining.Blast.Effect.1=+40% minerali estratti
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]Incremento del Raggio di Esplosione: [[YELLO
 Mining.Blast.Rank=[[RED]]Estrazione Esplosiva: [[YELLOW]] Grado {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Estrazione Esplosiva!
 Mining.Blast.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Estrazione Esplosiva [[GREEN]]si \u00e8 rigenerata!
+
+#REPAIR
 Repair.Effect.0=Riparazione
 Repair.Effect.1=Ripara Attrezzi e Armature
 Repair.Effect.10=Ripara l\'Oro (ABILIT\u00c0 {0}+)
@@ -174,9 +191,13 @@ Repair.Effect.6=Ripara Diamante (ABILIT\u00c0 {0}+)
 Repair.Effect.7=Ripara Attrezzi e Armature di Diamante
 Repair.Effect.8=Forgiatura Arcana
 Repair.Effect.9=Ripara oggetti magici
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]Hai piazzato un\'incudine; le incudini possono riparare attrezzi e armature.
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Riparazione:
 Repair.SkillName=RIPARAZIONE
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Non sei abbastanza abile da riparare il Diamante.
 Repair.Skills.AdeptGold=[[DARK_RED]]Non sei abbastanza abile da riparare l\'Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]Non sei abbastanza abile da riparare il Ferro.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Non sei abbastanza abile da riparare la Pie
 Repair.Skills.Adept=[[RED]]Devi essere di livello [[YELLOW]]{0}[[RED]] per riparare [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Ti \u00e8 sembrato facile.
 Repair.Skills.FullDurability=[[GRAY]]\u00c8 gi\u00e0 a piena durevolezza.
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Maestria nella Riparazione: [[YELLOW]]{0} di durata supplementare ripristinata
 Repair.Skills.StackedItems=[[DARK_RED]]Non puoi riparare oggetti ammucchiati.
 Repair.Skills.Super.Chance=[[RED]]Possibilit\u00e0 Super Riparazione: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]L\'abilit\u00e0 Riparazione \u00e8 aumentata di {0}. Totale ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]Possibilit\u00e0 di Degradazione di FA: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]Tasso di Successo di FA: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Il potere arcano di questo oggetto \u00e8 diminuito.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]Il potere arcano ha abbandonato l\'oggetto permanentem
 Repair.Arcane.Lost=[[RED]]Non sei stato abbastanza abile da mantenere alcun incantesimo.
 Repair.Arcane.Perfect=[[GREEN]]Hai mantenuto le energie arcane in questo oggetto.
 Repair.Arcane.Rank=[[RED]]Forgiatura Arcana: [[YELLOW]]Grado {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**ABBASSI LA SPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARI LA SPADA**
 Swords.Combat.Bleed.Chance=[[RED]]Possibilit\u00e0 di Emorragia: [[YELLOW]]{0}
@@ -223,6 +250,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Colpi Seghettat
 Swords.Skills.SS.Other.Off=[[RED]]Colpi Seghettati[[GREEN]] si \u00e8 esaurito per [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Colpi Seghettati!
 Swords.SS.Length=[[RED]]Durata di Colpi Seghettati: [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=Sicurezza Ambientale
 Taming.Ability.Bonus.1=I lupi evitano il pericolo
 Taming.Ability.Bonus.2=Pelliccia Folta
@@ -264,6 +293,8 @@ Taming.Skillup=[[YELLOW]]L\'abilit\u00e0 Addomesticamento \u00e8 aumentata di {0
 Taming.Summon.Complete=[[GREEN]]Evocazione completa
 Taming.Summon.Fail.Ocelot=[[RED]]Hai troppi ocelot vicino per poterne evocare degli altri.
 Taming.Summon.Fail.Wolf=[[RED]]Hai troppi lupi vicino per poterne evocare degli altri.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Durata di Furore: [[YELLOW]]{0} s
 Unarmed.Ability.Bonus.0=Stile del Braccio di Ferro
 Unarmed.Ability.Bonus.1=Potenziamento Danno +{0}
@@ -287,6 +318,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]Furore[[GREEN]] si \u00e8 esaurito per [
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Furore!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Furore [[GREEN]]si \u00e8 rigenerata!
 Unarmed.Skillup=[[YELLOW]]L\'abilit\u00e0 Lotta \u00e8 aumentata di {0}. Totale ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=Soffia Foglie
 Woodcutting.Ability.1=Soffia via le foglie
 Woodcutting.Ability.Chance.DDrop=[[RED]]Possibilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
@@ -308,9 +341,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]LA TUA ASCIA SI FRANTUMA IN DECINE DI PEZZI!
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Questo albero \u00e8 troppo grande!
 Woodcutting.Skillup=[[YELLOW]]L\'abilit\u00e0 Taglialegna \u00e8 aumentata di {0}. Totale ({1})
+
+#ABILITY
+##generic
 Ability.Generic.Refresh=[[GREEN]]**CAPACITA\' RIGENERATE!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[WHITE]]**DEVIARE FRECCIA**
 Combat.BeastLore=[[GREEN]]**BESTIA TRADIZIONALE**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Vita ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -321,6 +359,9 @@ Combat.Ignition=[[RED]]**ACCENSIONE**
 Combat.StruckByGore=[[RED]]**SEI STATO SBRANATO**
 Combat.TargetDazed=Il bersaglio \u00e8 rimasto [[DARK_RED]]Stordito
 Combat.TouchedFuzzy=[[DARK_RED]]Toccato sfocato. Feltro vertiginoso.
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]Riguardo il [[DARK_AQUA]]Progetto [[YELLOW]]mcMMO[[DARK_AQUA]]:,[[GOLD]]mcMMO \u00e8 una [[GOLD]]mod GdR [[RED]]open source [[GOLD]]creata nel Febbraio 2011,da [[BLUE]]nossr50[[GOLD]]. Il suo obiettivo \u00e8 di fornire un\'esperienza GdR di qualit\u00e0.,[[DARK_AQUA]]Consigli:,[[GOLD]] - [[GREEN]]Usa [[RED]]/mcc[[GREEN]] per vedere i comandi,[[GOLD]] - [[GREEN]]Digita [[RED]]/NOMEABILIT\u00c0[[GREEN]] per vedere informazioni dettagliate sull\'abilit\u00e0,[[DARK_AQUA]]Sviluppatori:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Capo Progetto),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Sviluppatore Capo),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Sviluppatore),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Sviluppatore),[[DARK_AQUA]]Link Utili:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] segnalazione bug,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Chat IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thread sul Forum di Bukkit
 Commands.Ability.Off=Uso delle capacit\u00e0 [[RED]]disattivato
 Commands.Ability.On=Uso delle capacit\u00e0 [[GREEN]]attivato
@@ -370,6 +411,8 @@ mcMMO.NoInvites=[[RED]]Non hai inviti in questo momento
 mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Se non hai accesso a un\'abilit\u00e0 non sar\u00e0 mostrata qui.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - Sito di mcMMO
+
+##party
 Commands.Party.InParty=[[GREEN]]Compagnia: {0}
 Party.Forbidden=[mcMMO] Le compagnie non sono permesse in questo mondo (vedi i Permessi)
 Party.Help.0=[[RED]]L\'uso corretto \u00e8 /party <nome-compagnia> per unirti ad essa o /party q per lasciarla
@@ -395,6 +438,8 @@ Party.Teleport.Hurt=[[RED]]Sei stato ferito negli ultimi {0} secondi e non puoi 
 Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
 Party.Unlocked=[[GRAY]]Party sbloccato.
+
+##xp
 Commands.XPGain.Acrobatics=Cadere
 Commands.XPGain.Archery=Attaccare Mostri
 Commands.XPGain.Axes=Attaccare Mostri
@@ -417,9 +462,14 @@ Commands.xprate.proper.2=[[RED]]Per favore specifica \"true\" o \"false\" per in
 Commands.xprate.started.0=[[GOLD]]E\' INIZIATO UN EVENTO XP PER mcMMO!
 Commands.xprate.started.1=[[GOLD]]IL TASSO DI XP DI mcMMO ORA E\' {0}x!
 XPRate.Event=[[GOLD]]mcMMO ha un\'evento in corso -> XP aumentato! la XP Rate e {0}x!
+
+#EFFECTS
+##generic
 Effects.Effects=EFFETTI
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[DARK_AQUA]]Riguardo Acrobatica:\n[[YELLOW]]Acrobatica \u00e8 l\'arte di muoversi agilmente in mcMMO.\n[[YELLOW]]Fornisce bonus in combattimento e contro i danni ambientali.\n\n[[DARK_AQUA]]GUADAGNARE XP:\n[[YELLOW]]Per guadagnare XP in questa capacit\u00e0 devi eseguire una\n[[YELLOW]]schivata in combattimento o sopravvivere a una caduta da\n[[YELLOW]]altezze che ti farebbero danni.\n\n[[DARK_AQUA]]Come funziona Capriola?\n[[YELLOW]]Hai una possibilit\u00e0 passiva quando subisci danno da caduta\n[[YELLOW]]di annullare il danno fatto. Puoi tenere premuto il tasto furtivo\n[[YELLOW]]durante la caduta per raddoppiare le possibilit\u00e0.\n[[YELLOW]]Questo attiva una Capriola Aggraziata invece di una normale.\n[[YELLOW]]Le Capriole Aggraziate sono come le capriole normali ma hanno\n[[YELLOW]]il doppio di possibilit\u00e0 di avvenire e forniscono pi\u00f9 incolumit\u00e0 dai\n[[YELLOW]]danni rispetto alle capriole normali. Le possibilit\u00e0 di fare una\n[[YELLOW]]capriola sono legate al tuo livello di abilit\u00e0.\n\n[[DARK_AQUA]]Come funziona Schivata?\n[[YELLOW]]La Schivata \u00e8 una possibilit\u00e0 passiva di dimezzare il danno\n[[YELLOW]]quando vieni ferito in combattimento.\n[[YELLOW]]\u00c8 legata al tuo livello di abilit\u00e0.
 Guides.Archery=La guida arrivera dopo.
 Guides.Axes=La guida arrivera dopo.
@@ -432,22 +482,32 @@ Guides.Swords=La guida arrivera dopo.
 Guides.Taming=La guida arrivera dopo.
 Guides.Unarmed=La guida arrivera dopo.
 Guides.Woodcutting=La guida arriver\u00e0 prossimamente...
+
+#INSPECT
 Inspect.Offline=[[RED]]Non hai il permesso di esaminare giocatori disconnessi!
 Inspect.OfflineStats=Statistiche mcMMO del Giocatore Disconnesso [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]Statistiche mcMMO di [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Sei troppo lontano da quel giocatore per esaminarlo!
+
+#ITEM
 Item.ChimaeraWing.Fail=**ALA CHIMERA FALLITA!**
 Item.ChimaeraWing.Pass=**ALA CHIMERA**
 Item.Injured.Wait=Sei stato ferito di recente e devi aspettare per usarla. [[YELLOW]]({0}s)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]Sei stato disarmato!!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Hai bisogno di piu
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Sei troppo stanco per poter riutilizzare questa abilita attendi.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=ABILITA\' DI COMBATTIMENTO=-
 Stats.Header.Gathering=[[GOLD]]-=ABILITA\' DI RACCOLTA=-
 Stats.Header.Misc=[[GOLD]]-=ABILITA\' VARIE=-
 Stats.Own.Stats=[[GREEN]]Statistiche [mcMMO]
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
