--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Elegantni pristani**
 Acrobatics.Combat.Proc=[[GREEN]]**Uskocil jsi**
 Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Valis se**
 Acrobatics.SkillName=AKROBACIE
 Acrobatics.Skillup=[[YELLOW]]Dovednost akrobacie byla navysena o {0}. Celkem ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=\u0160ance na navr\u00e1cen\u00ed \u0161\u00edp\u016f z mrtvol.
 Archery.Listener=Lukostrelba
 Archery.SkillName=LUKOSTRELBA
 Archery.Skillup=[[YELLOW]]Dovednost lukostrelba byla navysena o {0}. Celkem ({1})
+
+#AXES
 Axes.Ability.Bonus.0=Mistr sekyr
 Axes.Ability.Bonus.1=Bonusove zraneni {0}
 Axes.Ability.Bonus.2=Ucinek
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]Schopnost [[YELLOW]]Drtic lebek [[GREEN]]byla ob
 Axes.Skills.SS.Other.Off=[[RED]]Skull Splitter[[GREEN]] has worn off for [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]Drtice lebek!
 Axes.Skillup=[[YELLOW]]Dovednost v sekerach byla navysena o {0}. Celkem ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SHOVEL**
 Excavation.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVOU LOPATU**
 Excavation.Effect.0=Giga Drill Breaker (ABILITY)
@@ -72,6 +79,8 @@ Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER BYL AKTIVOVA
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Giga Drill Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Giga Drill Breaker!
+
+#FISHING
 Excavation.Skillup=[[YELLOW]]Dovednost v kopani byla navysena o {0}. Celkem ({1})
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=UZAMKNUTO DO UROVNE DOVEDNOSTI 150+ (SHAKE)
@@ -92,6 +101,8 @@ Fishing.Listener=Rybareni:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=RYBARENI
 Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Schopnost [[YELLOW]]Green Terra [[GREEN]]j
 Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] byla deaktivovana [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[DARK_RED]]Dovednost v bylinarstvi byla navysena o {0}. Celkem ({1}).
+
+#MINING
 Mining.Ability.Length=[[RED]]Trvani Super Breaker: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Breaker[[GREEN]] byl deaktivov
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Schopnost [[YELLOW]]Super Breaker [[GREEN]]obnovena!
 Mining.Skillup=[[YELLOW]]Dovednost v dolovani byla navysena o {0}. Celkem ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**VYBUCH**
 Mining.Blast.Effect.0=+35% ore yield
 Mining.Blast.Effect.1=+40% ore yield
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]Navyseni radiusu vybuchu: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Dovednost [[YELLOW]]Dolovani vybuchem [[GREEN]]je nyni obnovena!
+
+#REPAIR
 Repair.Effect.0=Opravovani
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -174,9 +191,13 @@ Repair.Effect.6=Oprava diamantovych predmetu ({0}+ SKILL)
 Repair.Effect.7=Oprava diamantovych nastroju a brneni
 Repair.Effect.8=Tajemne kovani
 Repair.Effect.9=Oprava enchantovanych predmetu
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Opravovani:
 Repair.SkillName=OPRAVOVANI
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Nemas dostatek dovednosti pro opravu Diamantovych predmetu.
 Repair.Skills.AdeptGold=[[DARK_RED]]Nemas dostatek dovednosti pro opravu Zlatych predmetu.
 Repair.Skills.AdeptIron=[[DARK_RED]]Nejsi dostatecne zkuseny na opravu s Ironem.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Nemas dostatek dovednosti pro opravu Kamenn
 Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Dovednost v opravovani byla navysena o {0}. Celkem ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]Predmet ztratil navzdy svou magickou silu.
 Repair.Arcane.Lost=[[RED]]Nemel jsi dostatocnou dovednost pro zachovani ocarovani predmetu.
 Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this item.
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**ODLOZIL JSI SVUJ MEC**
 Swords.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVUJ MEC**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
@@ -222,6 +249,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]Tvoje schopnost [[YELLOW]]Serrated Strikes [[G
 Swords.Skills.SS.Other.Off=[[RED]]Hrozivy utok[[GREEN]] byl deaktivovan [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]Hrozivy utok!
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
 Taming.Ability.Bonus.2=Husta srst
@@ -263,6 +292,8 @@ Taming.Skillup=[[YELLOW]]Dovednost v ochocovani byla navysena o {0}. Celkem ({1}
 Taming.Summon.Complete=[[GREEN]]Vyvol\u00e1n\u00ed hotovo
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Delka trvani Besneni: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
@@ -286,6 +317,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]Besneni[[GREEN]] bylo deaktivovano [[YEL
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]Besneni!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability is refreshed!
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=Vyfoukavac
 Woodcutting.Ability.1=Odfoukne listi
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
@@ -307,9 +340,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]TVOJE SEKERA SE ROZLETELA NA TISICE KOUSKU!
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Tento strom je prilis velky!
 Woodcutting.Skillup=[[YELLOW]]Dovednost v dolovani byla navysena o {0}. Celkem ({1})
+
+#ABILITIY
+##generic
 Ability.Generic.Refresh=[[GREEN]**SCHOPNOSTI OBNOVENY!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[WHITE]]**SIP VYCHYLEN**
 Combat.BeastLore=[[GREEN]]**TRADICE SELEM**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Zivoty ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -320,6 +358,9 @@ Combat.Ignition=[[RED]]**ZAPALENI**
 Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
 Combat.TargetDazed=Target was [[DARK_RED]]Dazed
 Combat.TouchedFuzzy=[[DARK_RED]]Nejasne dotcen. Mas zavrat.
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
@@ -369,6 +410,8 @@ mcMMO.NoInvites=[[RED]]Momentalne nemas zadne pozvanky
 mcMMO.NoPermission=[[DARK_RED]]Nedostatecna prava
 mcMMO.NoSkillNote=[[DARK_GRAY]]Pokud nemas pristup k schopnosti, nebude zobrazena.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
+
+##party
 Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Spr\u00e1vn\u00e9 pouzit\u00ed je /party <party-jmeno> pro pripojen\u00ed nebo /party q pro opusten\u00ed
@@ -394,6 +437,8 @@ Party.Teleport.Hurt=[[RED]]Byl jsi zasa\u017een p\u0159ed {0} sekundami a nem\u0
 Party.Teleport.Player=[[GREEN]]Byl jsi teleportovan k {0}.
 Party.Teleport.Target=[[GREEN]]{0} se k tobe teleportoval.
 Party.Unlocked=[[GRAY]]Party je odemknuta
+
+##xp
 Commands.XPGain.Acrobatics=Padani
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Utoceni na monstra
@@ -416,9 +461,14 @@ Commands.xprate.proper.2=[[RED]]Uvedte prosim true nebo false pro rozliseni zda-
 Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event=[[GOLD]]mcMMO je nyni v modu zmeneneho pomeru ziskavani dovednosti! Nasobek pomeru dovednosti je {0}x!
+
+#EFFECTS
+##generic
 Effects.Effects=EFEKTY
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Pruvodce jiz brzy...
 Guides.Axes=Pruvodce jiz brzy...
@@ -431,22 +481,32 @@ Guides.Swords=Pruvodce jiz brzy...
 Guides.Taming=Pruvodce jiz brzy...
 Guides.Unarmed=Pruvodce jiz brzy...
 Guides.Woodcutting=Guide coming soon...
+
+#INSPECT
 Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Statistiky pro offline hrace [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Statistiky pro [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+
+#ITEMS
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**KRIDLO CHIMERY**
 Item.Injured.Wait=Predchvili jsi byl zranen a musis pockat az budes moci pouzit tuto schopnost. [[YELLOW]]({0}s)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]Byl jsi odzbrojen!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Potrebujes vic
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Si moc unaveny na pouziti teto schopnosti znovu.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=BOJOVE DOVEDNOSTI=-
 Stats.Header.Gathering=[[GOLD]]-=SHROMAZDOVACI DOVEDNOSTI=-
 Stats.Header.Misc=Ostatni schopnosti
 Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
