--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**Ausgewichen**
 Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=AKROBATIK
 Acrobatics.Skillup=[[YELLOW]]Acrobatik Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Bogenschie\u00dfen
 Archery.SkillName=BOGENSCHIE\u00dfEN
 Archery.Skillup=[[YELLOW]]Bogenschiessen Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#AXES
 Axes.Ability.Bonus.0=Axt Beherrschung
 Axes.Ability.Bonus.1=Bonus {0} damage
 Axes.Ability.Bonus.2=Wucht
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]Deine [[YELLOW]]Sch\u00e4delspalter [[GREEN]]-F\
 Axes.Skills.SS.Other.Off=[[RED]]Skull Splitter[[GREEN]] has worn off for [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] hat [[RED]]Sch\u00e4delspalter eingesetzt!
 Axes.Skillup=[[YELLOW]]Axt Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SHOVEL**
 Excavation.Ability.Ready=[[GREEN]]**YOU READY YOUR SHOVEL**
 Excavation.Effect.0=Giga Drill Breaker (ABILITY)
@@ -73,6 +80,8 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Br
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Giga Drill Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Giga Drill Breaker!
 Excavation.Skillup=[[YELLOW]]Graben Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#FISHING
 Fishing.Ability.Info=[[RED]]Magiej\u00e4ger: [[GRAY]] **Verbessert sich mit Schatzj\u00e4ger Rang**
 Fishing.Ability.Locked.0=Gesperrt bis Level 150+ (SHAKE)
 Fishing.Ability.Rank=[[RED]]Schatzj\u00e4ger Rang: [[YELLOW]]{0}/5
@@ -92,6 +101,8 @@ Fishing.Listener=Angeln:
 Fishing.MagicFound=[[AQUA]]Du hast etwas magisches gefunden...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]abilit
 Herbalism.Skills.GTe.Other.Off=[[RED]]Gr\u00fcner Daumen[[GREEN]] f\u00fcr [[YELLOW]]{0}[[GREEN]]ausgelaufen!
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[YELLOW]]Kr\u00e4uterkunde Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#MINING
 Mining.Ability.Length=[[RED]]Super Brecher Dauer: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Breaker[[GREEN]] has worn off 
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Dein [[YELLOW]]Super Brecher [[GREEN]]ist wieder bereit!
 Mining.Skillup=[[YELLOW]]Bergbau Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% ore yield
 Mining.Blast.Effect.1=+40% ore yield
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Deine [[YELLOW]]explosiv Bergbau [[GREEN]]F\u00e4higkeit ist erneuert!
+
+#REPAIR
 Repair.Effect.0=Reparieren
 Repair.Effect.1=Repair Tools & Armor
 Repair.Effect.10=Gold Repair ({0}+ SKILL)
@@ -174,9 +191,13 @@ Repair.Effect.6=Diamant Reparatur ({0}+ SKILL)
 Repair.Effect.7=Repariere Diamant Werkzeug & R\u00fcstungen
 Repair.Effect.8=Arkane Schmiedekunst
 Repair.Effect.9=Repariere magische Gegenst\u00e4nde
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]Du hast einen Amboss plaziert, Ambosse k\u00f6nnen Waffen und R\u00fcstung reparieren.
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Reparieren:
 Repair.SkillName=Reparatur
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Deine Fertigkeit ist nicht hoch genug, um Diamant zu reparieren.
 Repair.Skills.AdeptGold=[[DARK_RED]]Deine Fertigkeit ist nicht hoch genug um Gold zu reparieren.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Deine Fertigkeit ist nicht hoch genug, um S
 Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]Du kannst keine gestapelten Gegenst\u00e4nde reparieren.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Reparatur Fertigkeit ist um  {0} gestiegen. Gesamt ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]Die geheimnisvolle Kraft hat den Gegenstand dauerhaft 
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
 Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this item.
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
 Swords.Ability.Ready=[[GREEN]]**Du hebst dein Schwert**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
@@ -223,6 +250,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]]Serrated Strikes [[GREEN]]abili
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=Umweltbewusst
 Taming.Ability.Bonus.1=W\u00f6lfe vermeiden Gefahr
 Taming.Ability.Bonus.2=Dickes Fell
@@ -264,6 +293,8 @@ Taming.Skillup=[[YELLOW]]Tierz\u00e4hmung Fertigkeit ist um {0} gestiegen. Gesam
 Taming.Summon.Complete=[[GREEN]]Beschw\u00f6ren abgeschlossen
 Taming.Summon.Fail.Ocelot=[[RED]]Du hast zu viele Ozelots in deiner N\u00e4he um weitere zu beschw\u00f6ren.
 Taming.Summon.Fail.Wolf=[[RED]]Du hast zu viele W\u00f6lfe in deiner N\u00e4he um weitere zu beschw\u00f6ren.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} Extra Schaden
@@ -287,6 +318,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] has worn off for [[YELL
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] hat [[RED]]Berserker[[DARK_GREEN]] benutzt!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]Your [[YELLOW]]Berserk [[GREEN]]ability is refreshed!
 Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=Laubbl\u00e4ser
 Woodcutting.Ability.1=Blase Bl\u00e4tter weg
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
@@ -308,9 +341,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]Der Axt ist zersplittert
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Dieser Baum ist zu gro\u00df!
 Woodcutting.Skillup=[[YELLOW]]Holzf\u00e4llen Fertigkeit ist um {0} gestiegen. Gesamt ({1})
+
+#ABILITIY
+##generic
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[AQUA]]**PFEIL ABGELENKT**
 Combat.BeastLore=[[YELLOW]]**BESTIENKUNDE**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -321,6 +359,9 @@ Combat.Ignition=[[RED]]**ENTZUENDEN**
 Combat.StruckByGore=[[RED]]**Getroffen von Biss**
 Combat.TargetDazed=Target was [[DARK_RED]]benommen
 Combat.TouchedFuzzy=[[DARK_RED]]Benommen. fuehlt sich schwindelig.
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
@@ -370,6 +411,8 @@ mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Unzureichende Rechte.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
+
+##party
 Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
@@ -395,6 +438,8 @@ Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir hin teleportiert
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
+
+##xp
 Commands.XPGain.Acrobatics=Fallen
 Commands.XPGain.Archery=Monster angreifen
 Commands.XPGain.Axes=Monster angreifen
@@ -417,9 +462,14 @@ Commands.xprate.proper.2=[[RED]]Please specify true or false to indicate if this
 Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+
+#EFFECTS
+##generic
 Effects.Effects=Effekte
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
 Guides.Axes=Guide coming soon...
@@ -432,22 +482,32 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
+
+#INSPECT
 Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+
+#ITEMS
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=Du wurdest vor kurzem verletzt und musst warten, bis du es benutzen kannst. [[YELLOW]]({0}s)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]Du wurdest entwaffnet!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_AQUA]]Hierfuer brauchst du mehr [[YELLOW]]
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[AQUA]]Du bist zu muede um diese Faehigkeit erneut zu nutzen.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=KAMPF F\u00c4HIGKEITEN=-
 Stats.Header.Gathering=[[GOLD]]-=Sammel-Fertigkeit=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
