--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**Aterrizaje Agraciado**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquivado**
 Acrobatics.DodgeChance=[[RED]]Probabilidad de Esquivar: [[YELLOW]]{0}%
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]
 Acrobatics.Roll.Text=**Rodado**
 Acrobatics.SkillName=ACROBACIAS
 Acrobatics.Skillup=[[YELLOW]]Habilidad de Acrobacias incrementada en {0}. Total ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]Probabilidad de Aturdimiento: [[YELLOW]]{0}%
 Archery.Combat.RetrieveChance=[[RED]]Probabilidad de Recuperar Flechas: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Da\u00f1o bonus por Habilidad de Tiro: [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=Probabilidad de recuperar flechas de los cadaveres
 Archery.Listener=Arquer\u00eda: 
 Archery.SkillName=ARQUER\u00cdA
 Archery.Skillup=[[YELLOW]]Habilidad de Arquer\u00eda incrementada en {0}. Total ({1})
+
+#AXES
 Axes.Ability.Bonus.0=Dominio del Hacha
 Axes.Ability.Bonus.1={0} de Da\u00f1o Bonus
 Axes.Ability.Bonus.2=Impacto
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad [[YELLOW]]Parte Cr\u00e1neos 
 Axes.Skills.SS.Other.Off=[[RED]]Parte Cr\u00e1neos[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Parte Cr\u00e1neos!
 Axes.Skillup=[[YELLOW]]Habilidad de Hacha incrementada en {0}. Total ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**BAJAS TU PALA**
 Excavation.Ability.Ready=[[GREEN]]**PREPARAS TU PALA**
 Excavation.Effect.0=Ultra Taladro Destructor (HABILIDAD)
@@ -73,6 +80,8 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELL
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Ultra Taladro Destructor[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ultra Taladro Destructor!
 Excavation.Skillup=[[YELLOW]]Habilidad de Excavaci\u00f3n incrementada en {0}. Total ({1})
+
+#FISHING
 Fishing.Ability.Info=[[RED]]Cazador M\u00e1gico: [[GRAY]] **Mejora con Rango de Buscador de Tesoros**
 Fishing.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 150+ (SACUDIDA)
 Fishing.Ability.Rank=[[RED]]Cazador de Tesoros: [[YELLOW]]Rango {0}/5
@@ -92,6 +101,8 @@ Fishing.Listener=Pescador:
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]\u00a1Tu habilidad [[YELLOW]]Tierra Verde 
 Herbalism.Skills.GTe.Other.Off=[[RED]]Tierra Verde[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Tierra Verde!
 Herbalism.Skillup=[[YELLOW]]Habilidad de Herbalismo incrementada en {0}. Total ({1})
+
+#MINING
 Mining.Ability.Length=[[RED]]Duraci\u00f3n de Super Destructor: [[YELLOW]]{0}seg
 Mining.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 125+ (MINER\u00cdA EXPLOSIVA)
 Mining.Ability.Locked.1=BLOQUEADO HASTA 250+ SKILL (MAYORES BOMBAS)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]S\u00faper Destructor[[GREEN]] le ha
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Super Destructor!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]S\u00faper Destructor [[GREEN]]est\u00e1 refrescada!
 Mining.Skillup=[[YELLOW]]Habilidad de Miner\u00eda incrementada en {0}. Total ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% de producci\u00f3n minera
 Mining.Blast.Effect.1=+40% de producci\u00f3n minera
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]Incrementado Radio de Explosi\u00f3n: [[YELL
 Mining.Blast.Rank=[[RED]]Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
 Mining.Blast.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Miner\u00eda Explosiva [[GREEN]]est\u00e1 refrescada!
+
+#REPAIR
 Repair.Effect.0=Reparaci\u00f3n
 Repair.Effect.1=Reparar Herramientas y Armaduras
 Repair.Effect.10=Reparar Oro (HABILIDAD {0}+)
@@ -174,9 +191,13 @@ Repair.Effect.6=Reparaci\u00f3n de Diamante ({0}+ SKILL)
 Repair.Effect.7=Reparar Herramientas y Armaduras de Diamante
 Repair.Effect.8=Forjado Arcano
 Repair.Effect.9=Reparar objetos m\u00e1gicos
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]Has colocado un yunque y estos pueden usarse para reparar herramientas y armaduras.
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Reparaci\u00f3n:
 Repair.SkillName=REPARACI\u00d3N
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]No tienes la suficiente habilidad para reparar Diamante.
 Repair.Skills.AdeptGold=[[DARK_RED]]No tienes la suficiente habilidad para reparar Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]No tienes la suficiente habilidad para reparar Hierro.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]No tienes la suficiente habilidad para repa
 Repair.Skills.Adept=[[RED]]Debes ser nivel [[YELLOW]]{0}[[RED]] para reparar [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Eso ha sido f\u00e1cil.
 Repair.Skills.FullDurability=[[GRAY]]Esto est\u00e1 nuevo.
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Maestr\u00eda de la Reparaci\u00f3n: [[YELLOW]]{0} de durabilidad adicional restaurada
 Repair.Skills.StackedItems=[[DARK_RED]]No puedes reparar items apilados.
 Repair.Skills.Super.Chance=[[RED]]Probabilidad de Super Reparaci\u00f3n: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Habilidad de Reparaci\u00f3n incrementada en {0}. Total ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]Probabilidad de Degradaci\u00f3n en la Forja Arcana: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]Probabilidad de Exito en la Forja Arcana: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]El poder Arcano de este objeto ha disminu\u00eddo.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]El objeto ha perdido permanentemente sus poderes Arcan
 Repair.Arcane.Lost=[[RED]]No tienes habilidad suficiente para mantener ning\u00fan tipo de encantamientos.
 Repair.Arcane.Perfect=[[GREEN]]Has logrado mantener las energ\u00edas Arcanas de este objeto.
 Repair.Arcane.Rank=[[RED]]Forja Arcana: [[YELLOW]]Rango {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**BAJAS TU ESPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARASTE TU ESPADA**
 Swords.Combat.Bleed.Chance=[[RED]]Probabilidad de Sangramiento: [[YELLOW]]{0}
@@ -223,6 +250,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Golpe Dentado 
 Swords.Skills.SS.Other.Off=[[RED]]Ataque Dentado[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ataque Dentado!
 Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
 Taming.Ability.Bonus.2=Piel Gruesa
@@ -264,6 +293,8 @@ Taming.Skillup=[[YELLOW]]Habilidad de Domador incrementada en {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Invocaci\u00f3n completada
 Taming.Summon.Fail.Ocelot=[[RED]]Tienes demasiados ocelotes cerca como para convocar m\u00e1s.
 Taming.Summon.Fail.Wolf=[[RED]]Tienes demasiados lobos cerca como para convocar m\u00e1s.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Duraci\u00f3n de Enloquecido: [[YELLOW]]{0}seg
 Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
@@ -287,6 +318,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]Enloquecido[[GREEN]] le ha expirado a [[
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Enloquecido!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u00a1T\u00fa habilidad [[YELLOW]]Enloquecido [[GREEN]]est\u00e1 refrescada!
 Unarmed.Skillup=[[YELLOW]]Habilidad de Desarmado incrementada en {0}. Total ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=Soplador de Hojas
 Woodcutting.Ability.1=Remover hojas
 Woodcutting.Ability.Chance.DDrop=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
@@ -308,9 +341,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]\u00a1TU HACHA EXPLOT\u00d3 EN MILES DE PEDAZOS!
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]\u00a1Ese \u00e1rbol es demasiado grande!
 Woodcutting.Skillup=[[YELLOW]]Habilidad de Le\u00f1ador incrementada en {0}. Total ({1})
+
+#ABILITIY
+##generic
 Ability.Generic.Refresh=[[GREEN]]**\u00a1HABILIDADES REFRESCADAS!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[WHITE]]**FLECHA DESVIADA**
 Combat.BeastLore=[[GREEN]]**CONOCIMIENTO DE LA BESTIA**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Salud ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -321,6 +359,9 @@ Combat.Ignition=[[RED]]**IGNICION**
 Combat.StruckByGore=[[RED]]**FUISTE MORDISQUEADO**
 Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
 Combat.TouchedFuzzy=[[DARK_RED]]Est\u00e1s confuso. Te sientes mareado.
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]Acerca del Proyecto [[YELLOW]]mcMMO[[DARK_AQUA]]:,[[GOLD]]mcMMO es un mod RPG de [[RED]]c\u00f3digo abierto[[GOLD]] creado en febrero de 2011,[[GOLD]]por [[BLUE]]nossr50[[GOLD]]. El objetivo es de proporcionar una experiencia RPG de calidad.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] para ver los comandos,[[GOLD]] - [[GREEN]]Escriba [[RED]]/HABILIDAD[[GREEN]] para ver info detallada de la habilidad,[[DARK_AQUA]]Desarrolladores:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Lider del Proyecto),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Desarrolladores Senior),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]Sharkiller [[BLUE]](Traductor),[[GOLD]] - [[GREEN]]barreytor [[BLUE]](Traductor),[[DARK_AQUA]]Links \u00fatiles:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Reportar bugs,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Chat IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Tema en el foro de Bukkit
 Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
@@ -370,6 +411,8 @@ mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
 mcMMO.Website=[[BLUE]]P\u00e1gina Web de mcMMO - [[GREEN]]http://forums.mcmmo.info
+
+##party
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
 Party.Help.0=[[RED]]El uso correcto es \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
@@ -395,6 +438,8 @@ Party.Teleport.Hurt=[[RED]]Fuiste herido en los \u00faltimos {0} segundos y no t
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
+
+##xp
 Commands.XPGain.Acrobatics=Cayendo
 Commands.XPGain.Archery=Atacando a Monstruos
 Commands.XPGain.Axes=Atacando a Monstruos
@@ -417,9 +462,14 @@ Commands.xprate.proper.2=[[RED]]Por favor especifique true o false para indicar 
 Commands.xprate.started.0=[[GOLD]]\u00a1EL EVENTO DE EXP DE mcMMO HA COMENZADO!
 Commands.xprate.started.1=[[GOLD]]\u00a1mcMMO est\u00e1 ahora en un evento de EXP! \u00a1El ratio de EXP es x{0}!
 XPRate.Event=[[GOLD]]\u00a1mcMMO est\u00e1 ahora en un evento de rate de EXP! \u00a1El rate de EXP es {0}x!
+
+#EFFECTS
+##generic
 Effects.Effects=EFECTOS
 Effects.Level=[[DARK_GRAY]]Nivel: [[GREEN]]{0} [[DARK_AQUA]]EXP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[GRAY]]\u00a1Gu\u00eda pr\u00f3ximamente!
 Guides.Archery=Gu\u00eda pr\u00f3ximamente...
 Guides.Axes=Gu\u00eda pr\u00f3ximamente...
@@ -432,22 +482,32 @@ Guides.Swords=Gu\u00eda pr\u00f3ximamente...
 Guides.Taming=Gu\u00eda pr\u00f3ximamente...
 Guides.Unarmed=Gu\u00eda pr\u00f3ximamente...
 Guides.Woodcutting=Gu\u00eda pr\u00f3ximamente...
+
+#INSPECT
 Inspect.Offline=[[RED]]\u00a1No tienen permiso para inspeccionar jugadores fuera de linea!
 Inspect.OfflineStats=Estad\u00edsticas de mcMMO para el Jugador Desconectado [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]Estad\u00edsticas de mcMMO para [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]\u00a1Est\u00e1s demasiado lejos como para inspeccionar a ese jugador!
+
+#ITEMS
 Item.ChimaeraWing.Fail=**\u00a1LAS ALAS DE QUIMERA FALLARON!**
 Item.ChimaeraWing.Pass=**\u00a1ALAS DE QUIMERA!**
 Item.Injured.Wait=Te lesionaste recientemente y ten\u00e9s que esperar para usar esto. [[YELLOW]]({0}seg)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]\u00a1Has sido desarmado!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Necesitas m\u00e1s
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] EXP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Est\u00e1s demasiado cansado como para utilizar esa habilidad de nuevo.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=HABILIDADES DE COMBATE=-
 Stats.Header.Gathering=[[GOLD]]-=HABILIDADES DE RECOLECCI\u00d3N=-
 Stats.Header.Misc=[[GOLD]]-=HABILIDADES VARIAS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Estad\u00edsticas
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
