--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -1,3 +1,4 @@
+#ACROBATICS
 Acrobatics.Ability.Proc=[[GREEN]]**\u5b8c\u7f8e\u7ffb\u6eda**
 Acrobatics.Combat.Proc=[[GREEN]]**\u95ea\u907f**
 Acrobatics.DodgeChance=[[RED]]\u95ea\u907f\u51e0\u7387: [[YELLOW]]{0}
@@ -13,6 +14,8 @@ Acrobatics.Roll.GraceChance=[[RED]]\u4f18\u96c5\u7684\u7ffb\u6eda\u51e0\u7387: [
 Acrobatics.Roll.Text=**\u7ffb\u6eda**
 Acrobatics.SkillName=\u6742\u6280
 Acrobatics.Skillup=[[YELLOW]]\u6742\u6280\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
+
+#ARCHERY
 Archery.Combat.DazeChance=[[RED]]\u51fb\u6655\u51e0\u7387: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]\u56de\u6536\u7bad\u77e2\u7684\u51e0\u7387: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]\u6280\u5de7\u5c04\u51fb\u5956\u52b1\u4f24\u5bb3: [[YELLOW]]{0}
@@ -25,6 +28,8 @@ Archery.Effect.5=\u6709\u51e0\u7387\u4ece\u5c38\u4f53\u4e0a\u56de\u6536\u7bad\u7
 Archery.Listener=\u7bad\u672f:(ARCHERY)
 Archery.SkillName=\u7bad\u672f
 Archery.Skillup=[[YELLOW]]\u7bad\u672f\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
+
+#AXES
 Axes.Ability.Bonus.0=\u65a7\u5934\u7cbe\u901a
 Axes.Ability.Bonus.1=\u5956\u52b1 {0} \u4f24\u5bb3
 Axes.Ability.Bonus.2=\u51b2\u51fb
@@ -58,6 +63,8 @@ Axes.Skills.SS.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u65a9\u9996\u8005 [[GREE
 Axes.Skills.SS.Other.Off=[[RED]]\u65a9\u9996\u8005[[GREEN]] \u5df2\u7ecf\u7ed3\u675f\u4e86 [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]]\u4f7f\u7528\u4e86 [[RED]]\u65a9\u9996\u8005!
 Axes.Skillup=[[YELLOW]]\u65a7\u5934\u6280\u80fd\u589e\u52a0\u4e86 {0}. \u603b\u5171 ({1})
+
+#EXCAVATION
 Excavation.Ability.Lower=[[GRAY]]**\u4f60\u653e\u4e0b\u4e86\u4f60\u7684\u94f2\u5b50**
 Excavation.Ability.Ready=[[GREEN]]**\u4f60\u63e1\u7d27\u4e86\u4f60\u7684\u94f2\u5b50**
 Excavation.Effect.0=\u66b4\u8d70\u94bb\u5934 (\u4e3b\u52a8\u6280\u80fd)
@@ -73,6 +80,8 @@ Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u66b
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]\u66b4\u8d70\u94bb\u5934[[GREEN]] \u8fdb\u5165\u51b7\u5374 [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u66b4\u8d70\u94bb\u5934!
 Excavation.Skillup=[[YELLOW]]\u6316\u6398\u6280\u80fd\u63d0\u5347 {0}. \u603b\u5171 ({1})
+
+#FISHING
 Fishing.Ability.Info=[[RED]]\u9b54\u6cd5\u730e\u4eba: [[GRAY]] ** \u968f\u7740\u5b9d\u85cf\u730e\u4eba\u7b49\u7ea7\u63d0\u9ad8  **
 Fishing.Ability.Locked.0=\u6280\u80fd 150+ \u89e3\u9501 (\u6643\u52a8\u602a\u7269)
 Fishing.Ability.Rank=[[RED]]\u5b9d\u7269\u730e\u4eba\u7b49\u7ea7: [[YELLOW]]{0}/5
@@ -92,6 +101,8 @@ Fishing.Listener=\u9493\u9c7c:
 Fishing.MagicFound=[[GRAY]]\u4f60\u611f\u5230\u4e00\u80a1\u9b54\u529b\u7684\u6ce2\u52a8...
 Fishing.SkillName=\u9493\u9c7c
 Fishing.Skillup=[[YELLOW]]\u9493\u9c7c\u6280\u80fd\u63d0\u5347\u4e86 {0}. \u603b\u5171 ({1})
+
+#HERBALISM
 Herbalism.Ability.DoubleDropChance=[[RED]]\u53cc\u500d\u6389\u843d\u51e0\u7387: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]\u519c\u592b\u98df\u8c31: [[YELLOW]]\u7b49\u7ea7 {0}
 Herbalism.Ability.GTe.Length=[[RED]]\u571f\u795e\u5e87\u4f51\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
@@ -119,6 +130,8 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u571f\u795e\u5e87\
 Herbalism.Skills.GTe.Other.Off=[[RED]]\u571f\u795e\u5e87\u4f51[[GREEN]] \u5df2\u7ecf\u7ed3\u675f\u4e86 [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u571f\u795e\u5e87\u4f51!
 Herbalism.Skillup=[[YELLOW]]\u8349\u836f\u5b66\u6280\u80fd\u7b49\u7ea7\u4e0a\u5347 {0}. \u73b0\u5728\u662f ({1})
+
+#MINING
 Mining.Ability.Length=[[RED]]\u8d85\u7ea7\u77ff\u5de5\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=\u6316\u77ff\u6280\u80fd125+\u89e3\u9501 (\u7206\u7834\u5f00\u91c7)
 Mining.Ability.Locked.1=\u7b49\u7ea7 250+ \u5f00\u542f\u6280\u80fd (\u5927\u53f7\u70b8\u5f39)
@@ -145,6 +158,8 @@ Mining.Skills.SuperBreaker.Other.Off=[[RED]]\u8d85\u7ea7\u77ff\u5de5[[GREEN]] \u
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u8d85\u7ea7\u77ff\u5de5!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u8d85\u7ea7\u77ff\u5de5 [[GREEN]]\u6280\u80fd\u5df2\u7ecf\u53ef\u4ee5\u518d\u6b21\u4f7f\u7528\u4e86\uff01
 Mining.Skillup=[[YELLOW]]\u6316\u77ff\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
+
+#Blast Mining
 Mining.Blast.Boom=[[GRAY]]**\u5623**
 Mining.Blast.Effect.0=+35% \u77ff\u77f3\u4ea7\u91cf
 Mining.Blast.Effect.1=+40% \u77ff\u77f3\u4ea7\u91cf
@@ -158,6 +173,8 @@ Mining.Blast.Radius.Increase=[[RED]]\u7206\u70b8\u534a\u5f84\u63d0\u5347: [[YELL
 Mining.Blast.Rank=[[RED]]\u7206\u7834\u5f00\u91c7: [[YELLOW]] \u6392\u540d {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u7206\u7834\u5f00\u91c7!
 Mining.Blast.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u7206\u7834\u5f00\u91c7 [[GREEN]]\u6280\u80fd\u51b7\u5374\u5b8c\u6bd5!
+
+#REPAIR
 Repair.Effect.0=\u4fee\u7406
 Repair.Effect.1=\u4fee\u7406\u5de5\u5177\u548c\u88c5\u5907
 Repair.Effect.10=\u4fee\u7406\u9ec4\u91d1 ({0}+ SKILL)
@@ -174,9 +191,13 @@ Repair.Effect.6=\u94bb\u77f3\u4fee\u7406 ({0}+ SKILL)
 Repair.Effect.7=\u4fee\u7406\u94bb\u77f3\u5de5\u5177\u548c\u88c5\u5907
 Repair.Effect.8=\u79d8\u6cd5\u953b\u9020
 Repair.Effect.9=\u4fee\u7406\u9644\u9b54\u7269\u54c1
+Repair.Effect.16=Salvage ({0}+ SKILL)
+Repair.Effect.17=Salvage Tools & Armor
 Repair.Listener.Anvil=[[DARK_RED]]\u4f60\u653e\u7f6e\u4e86\u4e00\u4e2a\u4fee\u7406\u53f0,\u53ef\u4ee5\u4fee\u7406\u5de5\u5177\u548c\u88c5\u5907
+Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=\u4fee\u7406\uff1a
 Repair.SkillName=\u4fee\u7406
+Repair.Skills.AdeptSalvage=[[DARK_RED]]You're not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u94bb\u77f3\u88c5\u5907.
 Repair.Skills.AdeptGold=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u9ec4\u91d1\u88c5\u5907.
 Repair.Skills.AdeptIron=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u4e0d\u8db3\u4ee5\u4fee\u590d\u94c1\u8d28\u88c5\u5907.
@@ -184,10 +205,14 @@ Repair.Skills.AdeptStone=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\
 Repair.Skills.Adept=[[RED]]\u4f60\u5fc5\u987b\u8fbe\u5230\u7b49\u7ea7 [[YELLOW]]{0}[[RED]] \u624d\u80fd\u4fee\u7406 [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]\u90a3\u770b\u8d77\u6765\u5f88\u7b80\u5355.
 Repair.Skills.FullDurability=[[GRAY]]\u4f60\u7684\u88c5\u5907\u5df2\u7ecf\u6ee1\u8010\u4e45\u5ea6\u4e86
+Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
+Repair.Skills.NotFullDurability=[[DARK_RED]]You can't salvage damaged items.
 Repair.Skills.Mastery=[[RED]]\u4fee\u7406\u7cbe\u901a: [[YELLOW]]\u989d\u5916\u56de\u590d {0}% \u8010\u4e45\u5ea6
 Repair.Skills.StackedItems=[[DARK_RED]]\u4f60\u65e0\u6cd5\u4fee\u7406\u5df2\u53e0\u52a0\u7684\u7269\u54c1.
 Repair.Skills.Super.Chance=[[RED]]\u8d85\u7ea7\u4fee\u7406\u51e0\u7387: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]\u4fee\u7406\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
+
+#Arcane Forging
 Repair.Arcane.Chance.Downgrade=[[GRAY]]\u9644\u9b54\u7b49\u7ea7\u964d\u4f4e\u51e0\u7387: [[YELLOW]]{0}
 Repair.Arcane.Chance.Success=[[GRAY]]\u79d8\u6cd5\u953b\u9020\u6210\u529f\u51e0\u7387: [[YELLOW]]{0}
 Repair.Arcane.Downgrade=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u7b49\u7ea7\u5df2\u4e0b\u964d.
@@ -195,6 +220,8 @@ Repair.Arcane.Fail=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u5df2\u6d88
 Repair.Arcane.Lost=[[RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fdd\u7559\u9644\u9b54\u5c5e\u6027.
 Repair.Arcane.Perfect=[[GREEN]]\u4f60\u6210\u529f\u5730\u4fdd\u7559\u4e86\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54.
 Repair.Arcane.Rank=[[RED]]\u79d8\u6cd5\u953b\u9020: [[YELLOW]]\u7b49\u7ea7 {0}/4
+
+#SWORDS
 Swords.Ability.Lower=[[GRAY]]**\u4f60\u6536\u597d\u4e86\u4f60\u7684\u5251**
 Swords.Ability.Ready=[[GREEN]]**\u4f60\u628a\u5251\u7d27\u63e1\u5728\u4e86\u624b\u4e2d**
 Swords.Combat.Bleed.Chance=[[RED]]\u6d41\u8840\u51e0\u7387: [[YELLOW]]{0}
@@ -223,6 +250,8 @@ Swords.Skills.SS.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u952f\u9f7f\u653b\u51f
 Swords.Skills.SS.Other.Off=[[RED]]\u952f\u9f7f\u653b\u51fb[[GREEN]] \u5df2\u7ecf\u7ed3\u675f\u4e86 [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u952f\u9f7f\u653b\u51fb!
 Swords.SS.Length=[[RED]]\u952f\u9f7f\u5229\u5203\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
+
+#TAMING
 Taming.Ability.Bonus.0=\u7075\u7334\u654f\u6377
 Taming.Ability.Bonus.1=\u72fc\u4f1a\u907f\u514d\u5371\u9669
 Taming.Ability.Bonus.2=\u539a\u5b9e\u7684\u76ae\u6bdb
@@ -264,6 +293,8 @@ Taming.Skillup=[[YELLOW]]\u9a6f\u517d\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\
 Taming.Summon.Complete=[[GREEN]]\u53ec\u5524\u5b8c\u6bd5
 Taming.Summon.Fail.Ocelot=[[RED]]\u4f60\u7684\u8c79\u732b\u592a\u591a\u4e86\uff0c\u65e0\u6cd5\u7ee7\u7eed\u53ec\u5524.
 Taming.Summon.Fail.Wolf=[[RED]]\u4f60\u8eab\u8fb9\u5df2\u7ecf\u62e5\u6709\u8db3\u591f\u591a\u7684\u72fc,\u65e0\u6cd5\u53ec\u5524\u66f4\u591a.
+
+#UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]\u72c2\u66b4\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=\u94c1\u8155\u6a21\u5f0f
 Unarmed.Ability.Bonus.1=\u589e\u52a0{0}\u70b9\u4f24\u5bb3
@@ -287,6 +318,8 @@ Unarmed.Skills.Berserk.Other.Off=[[RED]]\u72c2\u66b4[[GREEN]] \u5df2\u7ecf\u7ed3
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u72c2\u66b4!
 Unarmed.Skills.Berserk.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u72c2\u66b4 [[GREEN]]\u6280\u80fd\u5df2\u7ecf\u53ef\u4ee5\u4f7f\u7528\u4e86!
 Unarmed.Skillup=[[YELLOW]]\u5f92\u624b\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u7b49\u7ea7 ({1})
+
+#WOODCUTTING
 Woodcutting.Ability.0=\u79cb\u98ce\u626b\u843d\u53f6
 Woodcutting.Ability.1=\u626b\u9664\u6811\u53f6
 Woodcutting.Ability.Chance.DDrop=[[RED]]\u53cc\u500d\u6389\u843d\u51e0\u7387: [[YELLOW]]{0}
@@ -308,9 +341,14 @@ Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]\u4f60\u7684\u65a7\u5934\u53d8\u6210\u4e86\u4e00\u5806\u788e\u7247\uff01
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]\u90a3\u68f5\u6811\u592a\u5927\u4e86!
 Woodcutting.Skillup=[[YELLOW]]\u4f10\u6728\u6280\u80fd\u63d0\u5347 {0}. \u603b\u5171 ({1})
+
+#ABILITY
+##generic
 Ability.Generic.Refresh=[[GREEN]]**\u6280\u80fd\u51b7\u5374\u5b8c\u6bd5!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+
+#COMBAT
 Combat.ArrowDeflect=[[WHITE]]**\u7bad\u77e2\u504f\u5411**
 Combat.BeastLore=[[GREEN]]**\u9a6f\u517d\u77e5\u8bc6**
 Combat.BeastLoreHealth=[[DARK_AQUA]]\u751f\u547d\u503c ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -321,6 +359,9 @@ Combat.Ignition=[[RED]]**\u70b9\u71c3**
 Combat.StruckByGore=[[RED]]**\u4f60\u5f00\u59cb\u6d41\u8840\u4e86**
 Combat.TargetDazed=\u76ee\u6807\u88ab [[DARK_RED]]\u88ab\u51fb\u6655
 Combat.TouchedFuzzy=[[DARK_RED]]\u5934\u6655\u76ee\u7729
+
+#COMMANDS
+##generic
 mcMMO.Description=[[DARK_AQUA]]\u5173\u4e8e [[YELLOW]]mcMMO[[DARK_AQUA]] \u9879\u76ee:,[[GOLD]]mcMMO \u662f\u4e00\u4e2a [[RED]]\u5f00\u6e90\u7684[[GOLD]] RPG\u63d2\u4ef6,[[GOLD]]\u5236\u4f5c\u8005\u662f[[BLUE]]nossr50[[GOLD]]. \u5b83\u7684\u76ee\u6807\u662f\u63d0\u4f9bRPG\u7684\u611f\u53d7.,[[DARK_AQUA]]\u5c0f\u63d0\u793a:,[[GOLD]] - [[GREEN]]\u4f7f\u7528 [[RED]]/mcc[[GREEN]] \u6765\u67e5\u770b\u6307\u4ee4,[[GOLD]] - [[GREEN]]\u8f93\u5165 [[RED]]/SKILLNAME[[GREEN]] \u6765\u67e5\u770b\u6307\u4ee4\u7684\u8be6\u7ec6\u4fe1\u606f,[[DARK_AQUA]]\u5f00\u53d1\u8005:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](\u9879\u76ee\u603b\u7ba1),[[GOLD]] - [[GREEN]]GJ [[BLUE]](\u9996\u5e2d\u5f00\u53d1\u8005),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](\u5f00\u53d1\u8005),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](\u5f00\u53d1\u8005),[[DARK_AQUA]]\u6709\u7528\u7684\u94fe\u63a5:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] BUG\u62a5\u544a,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC \u8054\u7cfb,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit \u5730\u5740
 Commands.Ability.Off=\u6280\u80fd\u4f7f\u7528 [[GREEN]]\u5173\u95ed
 Commands.Ability.On=\u6280\u80fd\u4f7f\u7528 [[GREEN]]\u5f00\u542f
@@ -370,6 +411,8 @@ mcMMO.NoInvites=[[RED]]\u4f60\u73b0\u5728\u6ca1\u6709\u6536\u5230\u4efb\u4f55\u9
 mcMMO.NoPermission=[[DARK_RED]]\u6743\u9650\u4e0d\u8db3.
 mcMMO.NoSkillNote=[[DARK_GRAY]]\u5982\u679c\u4f60\u6ca1\u6709\u67d0\u4e2a\u6280\u80fd\u7684\u4f7f\u7528\u6743\u9650\u90a3\u4e48\u4ed6\u5c06\u4e0d\u4f1a\u5728\u8fd9\u91cc\u663e\u793a.
 mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO \u5b98\u65b9\u7f51\u7ad9
+
+##party
 Commands.Party.InParty=[[GREEN]]\u961f\u4f0d: {0}
 Party.Forbidden=[mcMMO] \u961f\u4f0d\u529f\u80fd\u4e0d\u5141\u8bb8\u5728\u8fd9\u4e2a\u4e16\u754c\u5f00\u542f (\u8be6\u60c5\u8bf7\u770b\u6743\u9650\u914d\u7f6e)
 Party.Help.0=[[RED]]\u4f7f\u7528 /party <party-name> \u6765\u52a0\u5165\u6216 /party q \u6765\u9000\u51fa
@@ -395,6 +438,8 @@ Party.Teleport.Hurt=[[RED]]\u4f60\u5df2\u7ecf\u5728 {0} \u79d2\u524d\u53d7\u4f24
 Party.Teleport.Player=[[GREEN]]\u4f60\u5df2\u7ecf\u4f20\u9001\u5230 {0}.
 Party.Teleport.Target=[[GREEN]]{0} \u5df2\u7ecf\u4f20\u9001\u5230\u4f60\u8eab\u8fb9.
 Party.Unlocked=[[GRAY]]\u961f\u4f0d\u5df2\u89e3\u9501
+
+##xp
 Commands.XPGain.Acrobatics=\u6389\u843d
 Commands.XPGain.Archery=\u7a7a\u624b\u653b\u51fb\u602a\u7269
 Commands.XPGain.Axes=\u653b\u51fb\u602a\u7269
@@ -417,9 +462,14 @@ Commands.xprate.proper.2=[[RED]]\u8bf7\u6307\u5b9a true \u6216 false \u6765\u886
 Commands.xprate.started.0=[[GOLD]]  mcMMO \u9ad8\u7ecf\u9a8c\u4e8b\u4ef6\u5df2\u5f00\u59cb!
 Commands.xprate.started.1=[[GOLD]]mcMMO \u7ecf\u9a8c\u83b7\u53d6\u7387\u73b0\u5728\u4e3a {0}x!
 XPRate.Event=[[GOLD]]mcMMO \u73b0\u5728\u6b63\u5904\u4e8e\u9ad8\u7ecf\u9a8c\u4e8b\u4ef6\u9636\u6bb5! \u7ecf\u9a8c\u83b7\u53d6\u7387\u4e3a {0}\u500d
+
+#EFFECTS
+##generic
 Effects.Effects=\u6548\u679c
 Effects.Level=[[DARK_GRAY]]\u7b49\u7ea7: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
+
+#GUIDES
 Guides.Acrobatics=[[DARK_AQUA]]\u5173\u4e8e\u6742\u6280:\n[[YELLOW]]\u6742\u6280\u662f\u4e00\u95e8\u4f18\u96c5\u7684\u79fb\u52a8\u827a\u672f.\n[[YELLOW]]\u4ed6\u53ef\u4ee5\u63d0\u4f9b\u6218\u6597\u65f6\u7684\u989d\u5916\u5c5e\u6027\u5956\u52b1\u5e76\u4e14\u662f\u4f60\u7684\u79fb\u52a8\u66f4\u52a0\u65b9\u4fbf.\n[[DARK_AQUA]]\u63d0\u5347\u7ecf\u9a8c:\n[[YELLOW]]\u901a\u8fc7\u5728\u6218\u6597\u4e2d\u95ea\u907f\u5bf9\u624b\u6216\u8005\u4ece\u9ad8\u5904\u8dcc\u843d\u4e0d\u6b7b\u6765\u63d0\u5347\u8be5\u6280\u80fd\u7684\u7ecf\u9a8c.\n[[DARK_AQUA]]\u7ffb\u6eda\u662f\u5982\u4f55\u5de5\u4f5c\u7684?\n[[YELLOW]]\u7ffb\u6eda\u65f6\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd,\u5728\u4f60\u4ece\u9ad8\u7a7a\u6389\u843d\u65f6\uff0c\u4ed6\u6709\u4e00\u5b9a\u51e0\u7387\u51cf\u5c11\u6216\u8005\u5b8c\u5168\u6d88\u9664\u4f60\u6240\u53d7\u5230\u7684\u4f24\u5bb3\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]\u7ffb\u6eda\u7684\u51e0\u7387\u548c\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u6709\u5173\n[[DARK_AQUA]]\u95ea\u907f\u662f\u5982\u4f55\u5de5\u4f5c\u7684?\n[[YELLOW]]\u95ea\u907f\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\uff0c\u4ed6\u5728\u4f60\u88ab\u653b\u51fb\u65f6\u6709\u4e00\u5b9a\u51e0\u7387\u88ab\u6fc0\u53d1.\n[[YELLOW]]\u8fd9\u4e2a\u51e0\u7387\u548c\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u6709\u5173.
 Guides.Archery=\u8bf4\u660e\u5373\u5c06\u5230\u6765....
 Guides.Axes=\u8bf4\u660e\u5373\u5c06\u5230\u6765...
@@ -432,22 +482,32 @@ Guides.Swords=\u8bf4\u660e\u5373\u5c06\u5230\u6765...
 Guides.Taming=\u8bf4\u660e\u5373\u5c06\u5230\u6765...
 Guides.Unarmed=\u8bf4\u660e\u5373\u5c06\u5230\u6765...
 Guides.Woodcutting=\u6682\u65e0\u8bb2\u89e3
+
+#INSPECT
 Inspect.Offline=[[RED]]\u4f60\u6ca1\u6709\u67e5\u8be2\u4e0d\u5728\u7ebf\u73a9\u5bb6\u4fe1\u606f\u7684\u6743\u9650!
 Inspect.OfflineStats=\u4e0d\u5728\u7ebf\u73a9\u5bb6\u7684mcmmo\u7edf\u8ba1\u4fe1\u606f [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO \u7684\u7edf\u8ba1\u4fe1\u606f [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]\u4f60\u65e0\u6cd5\u68c0\u67e5\u90a3\u4e2a\u73a9\u5bb6\u56e0\u4e3a\u4f60\u4eec\u8ddd\u79bb\u592a\u8fdc\u4e86!
+
+#ITEM
 Item.ChimaeraWing.Fail=**\u5947\u7f8e\u62c9\u4e4b\u7ffc\u5931\u8d25\u4e86!**
 Item.ChimaeraWing.Pass=**\u5947\u7f8e\u62c9\u4e4b\u7ffc**
 Item.Injured.Wait=\u4f60\u6700\u8fd1\u53d7\u4f24\u4e86\u6240\u4ee5\u4f60\u5fc5\u987b\u7b49\u4e00\u6bb5\u65f6\u95f4\u624d\u80fd\u4f7f\u7528\u8fd9\u4e2a. [[YELLOW]]({0}s)
+
+#SKILLS
 Skills.Disarmed=[[DARK_RED]]\u4f60\u88ab\u7f34\u68b0\u4e86!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]\u4f60\u9700\u8981\u66f4\u591a
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]\u4f60\u73b0\u5728\u592a\u7d2f\u4e86\u6240\u4ee5\u4f60\u65e0\u6cd5\u4f7f\u7528\u8fd9\u4e2a\u6280\u80fd.
+
+#STATISTICS
 Stats.Header.Combat=[[GOLD]]-=\u683c\u6597\u6280\u80fd=-
 Stats.Header.Gathering=[[GOLD]]-=\u91c7\u96c6\u6280\u80fd=-
 Stats.Header.Misc=[[GOLD]]-=\u6742\u9879\u6280\u80fd=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u7edf\u8ba1\u4fe1\u606f
+
+#PERKS
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
